--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             <div class="container">
                 <div class="dir"> 
                        <ul class="limk">
-                    <a href="" class="links">Woman’s Fashion</a>
-                    <a href="" class="links">Men’s Fashion</a>
-                    <a href="" class="links">Electronics</a>
-                    <a href="" class="links">Home & Lifestyle</a>
-                    <a href="" class="links">Medicine</a>
-                    <a href="" class="links">Sports & Outdoor</a>
-                    <a href="" class="links">Baby’s & Toys</a>
-                    <a href="" class="links">Groceries & Pets</a>
-                    <a href="" class="links">Health & Beauty</a>
+                    <a href="#!" class="links">Woman’s Fashion</a>
+                    <a href="#!" class="links">Men’s Fashion</a>
+                    <a href="#!" class="links">Electronics</a>
+                    <a href="#!" class="links">Home & Lifestyle</a>
+                    <a href="#!" class="links">Medicine</a>
+                    <a href="#!" class="links">Sports & Outdoor</a>
+                    <a href="#!" class="links">Baby’s & Toys</a>
+                    <a href="#!" class="links">Groceries & Pets</a>
+                    <a href="#!" class="links">Health & Beauty</a>
                 </ul>
                 
                 <div class="swiper mySwiper">
