dilmurodEtiborgit add .git add .!

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
     <body>
         <header class="header">
+            <nav class="nav">
             <div class="container">
-                <nav class="nav">
                     <div class="nav_box">
                         <a href="#!" class="nav_logo">Exclusive</a>
                         <ul class="nav_list">
-                            <li><a href="#!" class="nav_link">Home</a></li>
-                            <li><a href="#!" class="nav_link">Contact</a></li>
-                            <li><a href="#!" class="nav_link">About</a></li>
-                            <li><a href="#!" class="nav_link">Sign Up</a></li>
+                            <li><a href="#!" class="nav_link"><span>Home</span></a></li>
+                            <li><a href="#!" class="nav_link"><span>Contact</span></a></li>
+                            <li><a href="#!" class="nav_link"><span>About</span></a></li>
+                            <li><a href="#!" class="nav_link"><span>Sign Up</span></a></li>
                         </ul>
                         <div class="forma">
                             <form class="form" action="">
@@ -39,8 +39,8 @@
             <div class="container">
                 <div class="dir">
                     <ul class="limk">
-                       <div> <a href="#!" class="links">Woman’s Fashion</a><svg class="lisn" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/></svg></div>
-                        <div><a href="#!" class="links">Men’s Fashion</a><svg class="lisn" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/></svg></div>
+                        <li><a href="#!" class="links"><span>Woman’s Fashion</span></a></li>
+                        <li><a href="#!" class="links"><span>Men’s Fashion</span></a></li>                    
                         <a href="#!" class="links">Electronics</a>
                         <a href="#!" class="links">Home & Lifestyle</a>
                         <a href="#!" class="links">Medicine</a>
@@ -70,10 +70,74 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide"><img src="./imags/macbook_1.png" alt=""></div>
-                            <div class="swiper-slide"><img src="./imags/macbook_2.png" alt=""></div>
-                            <div class="swiper-slide"><img src="./imags/macbook_3.png" alt=""></div>
-                            <div class="swiper-slide"><img src="./imags/imac.webp" alt=""></div>
+                            <div class="swiper-slide"><img src="./imags/macbook_1.png" alt="">
+                                <div class="appl_box">
+                                    <div class="appl_logo">
+                                        <div class="apple"><img src="./imags/apple.png" alt=""></div>
+                                        <p class="appl_text tx">Macbook Series</p>
+                                    </div>
+
+                                    <div class="appl_title tx">
+                                        <span>Up to 10% </span>
+                                        <span>off Voucher</span>
+                                    </div>
+
+                                    <div class="appl_links">
+                                        <div class="appl_link tx"><a href="">Shop Now </a></div>
+                                        <div class="icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a></div>
+                                    </div>
+                                </div></div>
+                            <div class="swiper-slide"><img src="./imags/macbook_2.png" alt="">
+                                <div class="appl_box">
+                                <div class="appl_logo">
+                                    <div class="apple"><img src="./imags/apple.png" alt=""></div>
+                                    <p class="appl_text tx">Macbook Series</p>
+                                </div>
+
+                                <div class="appl_title tx">
+                                    <span>Up to 10% </span>
+                                    <span>off Voucher</span>
+                                </div>
+
+                                <div class="appl_links">
+                                    <div class="appl_link tx"><a href="">Shop Now </a></div>
+                                    <div class="icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a></div>
+                                </div>
+                            </div></div>
+                            <div class="swiper-slide"><img src="./imags/macbook_3.png" alt="">
+                                <div class="appl_box">
+                                <div class="appl_logo">
+                                    <div class="apple"><img src="./imags/apple.png" alt=""></div>
+                                    <p class="appl_text tx">Macbook Series</p>
+                                </div>
+
+                                <div class="appl_title tx">
+                                    <span>Up to 10% </span>
+                                    <span>off Voucher</span>
+                                </div>
+
+                                <div class="appl_links">
+                                    <div class="appl_link tx"><a href="">Shop Now </a></div>
+                                    <div class="icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a></div>
+                                </div>
+                            </div></div>
+                            <div class="swiper-slide"><img src="./imags/imac.webp" alt="">
+                                <div class="appl_box">
+                                <div class="appl_logo">
+                                    <div class="apple"><img src="./imags/apple.png" alt=""></div>
+                                    <p class="appl_text tx">Imac 2023</p>
+                                </div>
+
+                                <div class="appl_title tx">
+                                    <span>Up to 10% </span>
+                                    <span>off Voucher</span>
+                                </div>
+
+                                <div class="appl_links">
+                                    <div class="appl_link tx"><a href="">Shop Now </a></div>
+                                    <div class="icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a></div>
+                                </div>
+                            </div></div>
                         </div>
 
                         <div class="swiper-pagination"></div>
